Complete Practice Portfolio 2

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -43,14 +43,14 @@
     <section class="experience-area">
         <h1>Experience</h1>
         <div class="flexible-container">
-            <div class="experience-item">
+            <div id="full-stack-experience" class="experience-item">
                 <h2>Full Stack Web Developer</h2>
                 <h3 class="orange-color">2021-Present | Pro Level Developer</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum odio voluptatibus dolore qui
                     praesentium, officiis vero quasi dicta ducimus aperiam assumenda, excepturi libero. Sit fugit iusto,
                     libero minus corporis assumenda.</p>
             </div>
-            <div class="experience-item">
+            <div id="web-dev-experience" class="experience-item">
                 <h2>Junior Web Developer</h2>
                 <h3 class="orange-color">2019-2021 | Learner Level Developer</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum odio voluptatibus dolore qui
@@ -59,6 +59,9 @@
             </div>
         </div>
     </section>
+    <footer>
+        <p>@Peter Parker 2023, an Ahmed IT initiative.</p>
+    </footer>
 </body>
 
 </html>
